# fiveChess

./: CMakeLists.txt  conanfile.txt
.cache/clangd/index/: ChessBoard.cpp.06EAC15DDC070066.idx  MyMainWindow.cpp.50D0DBEBC65625BC.idx  MyMainWindow.h.FC5290D457F2A478.idx  main.cpp.5F92DCC9EC959B62.idx  player.cpp.8968A53B4AEE5D81.idx  player.h.2F301B1F976443CF.idx  pointer.h.B8468BC499B0335A.idx
src/: ChessBoard.cpp  ChessBoard.h  MyMainWindow.cpp  MyMainWindow.h  main.cpp  player.cpp  player.h  pointer.h
